# ska-sci-ops-setup-validator-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pylintrc  CHANGELOG.rst  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml
.make/: .gitignore  .gitlab-ci.yml  .make-dependencies-support  .make-helm-support  .make-js-support  .make-k8s-support  .make-make-support  .make-metadata-support  .make-metrics-support  .make-oci-support  .make-terraform-support  .make-tmdata-support  ansible.mk  base.mk  bats.mk  conan.mk  configcapture.mk  cpp.mk  deb.mk  dependencies.mk  docs.mk  helm.mk  help.mk  js.mk  k8s.mk  make.mk  metrics.mk  oci.mk  python.mk  raw.mk  release.mk  rpm.mk  terraform.mk  tmdata.mk  xray.mk
.make/.chglog/: config.yml
.make/docs/src/: README.md
.make/resources/: build_rtd_docs.py  convert_umbrella_chart_to_helmfile.py  gitlab_section.sh  namespace.yml  namespace_auth.sh
.make/tests/: Makefile
.make/tests/data/helm-update-deps/: Chart.yaml  Expected.yaml
.make/tests/resources/: pyproject.toml.altsrc  pyproject.toml.badsrc  pyproject.toml.default
.make/tests/resources/altsrc/ska/skeleton/: __init__.py
.make/tests/resources/charts/ska-cicd-makefile-test/: Chart.yaml
.make/tests/resources/docs/src/: conf.py
.make/tests/resources/other-images/ska-cicd-nginx/: Dockerfile  file.txt
.make/tests/resources/other-images/ska-cicd-python/: Dockerfile  file.txt
.make/tests/resources/terraform/tf-bad-format/: terraform.tf
.make/tests/resources/terraform/tf-bad-type/: terraform.tf
.make/tests/resources/terraform/tf-good-module/: terraform.tf
.make/tests/resources/xray/: xray-config.json
.make/tests/unit/: 01_help.bats  02_release.bats  03_metadata.bats  04_helm.bats  05_oci.bats  09_conan.bats  10_rpm.bats  14_tmdata.bats  16_configcapture.bats  17_dependencies.bats
charts/ska-sci-ops-setup-validator-backend/: Chart.yaml  values.yaml
charts/ska-sci-ops-setup-validator-backend/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/ska-sci-ops-setup-validator-backend/templates/tests/: test-connection.yaml
src/: run.py
src/ska_sci_ops_setup_validator/: run.py  validate.py
tests/unit/ska_sci_ops_setup_validator/: test_validate.py
