[tool.poetry]
name = "ska-sci-ops-setup-validator"
version = "0.0.1"
description = "SKA Low and Mid telescope setup validator backend"
authors = ["SKAO Science Operations <sciops@skao.int>"]
maintainers = ["Sarrvesh Sridhar & Danny Price"]
license = "BSD"
readme = "README.md"
repository = "https://github.com/ska-sci-ops/prototype_setup_validator_backend"
keywords = ["SKA Low and Mid Setup Validator"]
packages = [
    { include = "ska_sci_ops_setup_validator", from = "src" },
]
include = [
    { path = 'tests'}
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras=["all"], version = "^0.115.0" }
uvicorn = { extras = ["standard"], version = "^0.25.0" }
pydantic = "*"
pydantic-core = "*"
typing-extensions = "*"
annotated-types = "*"
anyio = "*"
starlette = "*"
httpx = "*"

[tool.poetry.dev-dependencies]
isort = "*"
black = "^23"
flake8 = "*"
pylint = "*"
pylint_junit = "*"
pytest = "^7.4"
pytest-cov = "^3.0"
coverage = "*"
setuptools = "*"
ipython = "*"

[tool.pytest.ini_options]
testpaths = "tests"
junit_family = "legacy"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["ska-sci-ops-setup-validator"]

[tool.black]
line-length = 88
preview = true
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
